styling updates, better optimization and accessibility

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Connor R. Sullivan's Portfolio">
     <meta
       name="Portfolio - Connor Sullivan"
       content="This personal portfolio belongs to, and was developed by, Connor Sullivan."
